test/tests/operators/every/missing_duration.txt
error: expected exactly 1 positional argument
 --> tests/operators/every/missing_duration.tql:5:1
  |
5 | every {
  | ^^^^^ 
  |
  = usage: tql2.every interval:duration
  = docs: https://docs.tenzir.com/reference/operators/tql2.every
